<resources>
    <string name="app_name">NunBody</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_model">내 몸 보기</string>
    <string name="text_history">몸기록 보기</string>
    <string name="text_measure">Status</string>
    <string name="text_exercise">Recommended Exercise</string>
    <string name="text_scan">스캔하기</string>
    <!--<string name="text_model">My Body</string>-->
    <!--<string name="text_history">History</string>-->
    <!--<string name="text_measure">Status</string>-->
    <!--<string name="text_exercise">Recommended Exercise</string>-->
    <!--<string name="text_scan">Scan</string>-->
    <string name="text_thin_triangle"><b><u>마른 하체비만형</u></b></string>
    <string name="text_thin_retriangle"><b><u>마른 하체비만형</u></b></string>
    <string name="text_thin_jar"><b><u>마른 항아리체형</u></b></string>
    <string name="text_mid_triangle"><b><u>중간 하체비만형</u></b></string>
    <string name="text_mid_retriangle"><b><u>중간 역삼각형체형</u></b></string>
    <string name="text_mid_jar"><b><u>중간 항아리체형</u></b></string>
    <string name="text_result">당신은 </string>


    <!--Model Viewer String-->
    <string name="about">About…</string>
    <string name="about_text">This app allows you to view 3D models that you have downloaded, or open 3D models directly from your browser. Supports STL, OBJ, and PLY models. Tap the VR button at the bottom to view the model in your VR headset!\n\nCopyright © 2017 Dmitry Brant.</string>
    <string name="load_sample">Load sample</string>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model.</string>
    <string name="view_vr">View in VR mode</string>
    <string name="view_vr_not_loaded">Please load a model first.</string>


    <!--Qr Scanner String-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
</resources>
