<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_body"
            android:icon="@drawable/ic_body"
            android:title="@string/text_model" />
        <item
            android:id="@+id/nav_measure"
            android:icon="@drawable/ic_measuring"
            android:title="@string/text_measure" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/text_exercise" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/text_history" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="공유하기" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="보내기" />
        </menu>
    </item>

</menu>
