<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hoyeonlee.imaginecup.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_model"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/textStyle"
                    android:background="@color/black"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_model" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_history"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_history"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/textStyle"
                    android:background="@color/black"
                    android:alpha="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_history" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_measure"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_measure"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/textStyle"
                    android:background="@color/black"
                    android:alpha="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_measure" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_exercise"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_exercise"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/textStyle"
                    android:background="@color/black"
                    android:alpha="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_exercise" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_scan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.7"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/text_scan" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
